[package]
name = "xenstore-win"
version = "0.2.0"
edition = "2024"
description = "Xenstore implementation for Windows"
authors = ["Teddy Astie <teddy.astie@vates.tech>"]
keywords = ["xen", "xenstore", "windows"]
categories = ["api-bindings"]
license = "GPL-3.0-only"

[dependencies]
log = "0.4.26"
async-io = { version = "2.4.0", optional = true }
trait-variant = { version = "0.1.2", optional = true }
futures = { version = "0.3.31", optional = true }

[dependencies.windows]
version = "0.58"
features = [
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_Devices_DeviceAndDriverInstallation",
]

[dependencies.xenstore-rs]
version = "0.8"
features = ["async"]

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
smol = "2.0.2"

[features]
smol = ["async-io", "trait-variant", "futures"]
